feat: adiciona versão gráfica com JavaFX e atualiza documentação